gitops/clusters/homelab/apps/private/data-source-connector-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-source-connector-example
  namespace: private
spec:
  selector:
    app: data-source-connector-example
  ports:
    - port: 80
      targetPort: 3200
