gitops/clusters/homelab/apps/private/data-source-connector-example/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: data-source-connector-example
  namespace: private
spec:
  entryPoints:
    - private-web-secure
  routes:
    - match: Host(`data-source-example.internal.pavel-usanli.online`)
      kind: Rule
      services:
        - name: data-source-connector-example
          port: 80
  tls:
    certResolver: cloudflare
